--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,8 @@
   "description": "Press the button in the topright of your browser, to ask for koffie.",
   "author": "Nikkie Schaad | Wiljekoffie Intern",
   "action": {
-    "default_title": "Wil je koffie?"
+    "default_title": "Wil je koffie?",
+    "default_popup": "ui/order.html"
   },
   "permissions": ["scripting", "storage", "activeTab"],
   "background": {
